# doc2sop-core

./: .gitignore  LICENSE  POST_WORKFLOW.md  README.md  VOICE.md  chat.html  landing.html  pyproject.toml  server-api.py  sync-to-server.sh
.drafts/: sample-post-01.md
.github/workflows/: deploy.yml
docs/: voice-craft-SKILL.md
scripts/: nightly-improvements.sh
src/doc2sop_core/: __init__.py  language_blacklist.txt  language_rules.md  pipeline.py  prompts.py  server_wrapper.py
src/doc2sop_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py
