[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2sop-core"
version = "0.1.0"
description = "Document to SOP transformation pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doc2sop_core"]
